--- a/Project_3 SOLID/SOLID/SOLID/SingleResponsabilityPrincipale.csproj
+++ b/Project_3 SOLID/SOLID/SOLID/SingleResponsabilityPrincipale.csproj
@@ -43,6 +43,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Book.cs" />
+    <Compile Include="ConsolePrinter.cs" />
+    <Compile Include="IPrinter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
