--- a/Project_4 C_Sharp-Language-Basic/HelloWorld/HelloWorld/HelloWorld.csproj
+++ b/Project_4 C_Sharp-Language-Basic/HelloWorld/HelloWorld/HelloWorld.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{206CEC6B-EE30-4F8A-A1AC-F35741C93077}</ProjectGuid>
+    <ProjectGuid>{E01F0DB8-FDC4-4FCC-9819-E15E65A8E952}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>LiskovSubstitutionPrincipale</RootNamespace>
-    <AssemblyName>LiskovSubstitutionPrincipale</AssemblyName>
+    <RootNamespace>HelloWorld</RootNamespace>
+    <AssemblyName>HelloWorld</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,10 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bus.cs" />
-    <Compile Include="Car.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Car.cs" />
     <Compile Include="Vehicle.cs" />
   </ItemGroup>
   <ItemGroup>
