--- a/Project_3 SOLID/SOLID/LiskovSubstitutionPrincipale/LiskovSubstitutionPrincipale.csproj
+++ b/Project_3 SOLID/SOLID/LiskovSubstitutionPrincipale/LiskovSubstitutionPrincipale.csproj
@@ -42,11 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bus.cs" />
-    <Compile Include="Car.cs" />
+    <Compile Include="Cat.cs" />
+    <Compile Include="Crocodile.cs" />
+    <Compile Include="IRun.cs" />
+    <Compile Include="ISwim.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Vehicle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
