--- a/Project_5 Clases/Clases/Clases/Clases.csproj
+++ b/Project_5 Clases/Clases/Clases/Clases.csproj
@@ -42,8 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Buses.cs" />
+    <Compile Include="Car.cs" />
+    <Compile Include="Driver.cs" />
+    <Compile Include="GasStation.cs" />
+    <Compile Include="IGasStation.cs" />
+    <Compile Include="IVehicle.cs" />
+    <Compile Include="Motorcycle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Truck.cs" />
+    <Compile Include="Vehicle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
