--- a/Project_6 Array/ArrayApp/ArrayApp/ArrayApp.csproj
+++ b/Project_6 Array/ArrayApp/ArrayApp/ArrayApp.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ArrayOperation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringExample.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
