--- a/Project_7 Overload/Overload/Overload/Overload.csproj
+++ b/Project_7 Overload/Overload/Overload/Overload.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Angle.cs" />
+    <Compile Include="AngleComparer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
