--- a/Project_10 LINQ/Linq/Linq/Linq.csproj
+++ b/Project_10 LINQ/Linq/Linq/Linq.csproj
@@ -43,6 +43,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Computer.cs" />
+    <Compile Include="GenericList.cs" />
+    <Compile Include="GenericListExtension.cs" />
     <Compile Include="Print.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
