--- a/Project_16 Creational Patterns/CreationalPatterns/CreationalPatterns/Singleton.csproj
+++ b/Project_16 Creational Patterns/CreationalPatterns/CreationalPatterns/Singleton.csproj
@@ -42,8 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Hero.cs" />
+    <Compile Include="Planet.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sun.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
