--- a/Project_16 Creational Patterns/CreationalPatterns/CreationalPatterns/Singleton.csproj
+++ b/Project_16 Creational Patterns/CreationalPatterns/CreationalPatterns/Singleton.csproj
@@ -46,7 +46,7 @@
     <Compile Include="Planet.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sun.cs" />
+    <Compile Include="Universe.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
