--- a/Project_14 Encoding Disposal/Encoding/Encoding/EncodingDisposal.csproj
+++ b/Project_14 Encoding Disposal/Encoding/Encoding/EncodingDisposal.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DisposableTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Saver.cs" />
