--- a/Project_3 SOLID/SOLID/LiskovSubstitutionPrincipaleBad/LiskovSubstitutionPrincipaleBad.csproj
+++ b/Project_3 SOLID/SOLID/LiskovSubstitutionPrincipaleBad/LiskovSubstitutionPrincipaleBad.csproj
@@ -43,7 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Animal.cs" />
-    <Compile Include="Cat.cs" />
+    <Compile Include="Sheep.cs" />
     <Compile Include="Crocodile.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
