--- a/Project_18 Behavioral/Behavioral/Visitor/Visitor.csproj
+++ b/Project_18 Behavioral/Behavioral/Visitor/Visitor.csproj
@@ -44,13 +44,13 @@
   <ItemGroup>
     <Compile Include="Bank.cs" />
     <Compile Include="Company.cs" />
-    <Compile Include="HtmlVisitor.cs" />
-    <Compile Include="IAccount.cs" />
-    <Compile Include="IVisitor.cs" />
+    <Compile Include="HtmlOperatie.cs" />
+    <Compile Include="IAcceptOperatii.cs" />
+    <Compile Include="IOperatie.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="XmlVisitor.cs" />
+    <Compile Include="XmlOperatie.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
