--- a/2. DB/7.ORM/OrmStudentCore/ConsoleApp1/OrmStudentCore.csproj
+++ b/2. DB/7.ORM/OrmStudentCore/ConsoleApp1/OrmStudentCore.csproj
@@ -6,7 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CodeFirst\CodeFirst.csproj" />
+    <ProjectReference Include="..\DatabaseFirstCore\DatabaseFirstCore.csproj" />
   </ItemGroup>
 
 </Project>
