--- a/2. DB/ProjectStudent/Student.SqlServerDbProject/OrmStudentCoreConsole/OrmStudentCoreConsole.csproj
+++ b/2. DB/ProjectStudent/Student.SqlServerDbProject/OrmStudentCoreConsole/OrmStudentCoreConsole.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DomainStudent\DomainStudent.csproj" />
     <ProjectReference Include="..\StudentFirstCore\StudentFirstCore.csproj" />
   </ItemGroup>
 
