--- a/Project/Project/UniversityRating/UniversityRating.Presentation/UniversityRating.Presentation.csproj
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/UniversityRating.Presentation.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <ProjectReference Include="..\UniversityRating.Data\UniversityRating.Data.csproj" />
+  </ItemGroup>
+
 </Project>
