--- a/Project/Project/UniversityRating/UniversityRating.Presentation/appsettings.json
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-UniversityRating.Presentation-FA925C76-BCFB-41BB-80A8-186E12A2CDD4;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=MDDSK40062\\SQLEXPRESS;Initial Catalog=University;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
