--- a/Project/Project/UniversityRating/UniversityRating.Presentation/UniversityRating.Presentation.csproj
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/UniversityRating.Presentation.csproj
@@ -8,6 +8,8 @@
 
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="8.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
@@ -16,6 +18,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\UniversityRating.Data\UniversityRating.Data.csproj" />
+    <ProjectReference Include="..\UniversityRating.Services.Abstractions\UniversityRating.Services.Abstractions.csproj" />
+    <ProjectReference Include="..\UniversityRating.Services\UniversityRating.Services.csproj" />
   </ItemGroup>
 
 </Project>
