--- a/Project/Project/UniversityRating/UniversityRating.Presentation/appsettings.json
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=MDDSK40062\\SQLEXPRESS;Initial Catalog=University;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Data Source=CRISTIAN\\SQLEXPRESS;Initial Catalog=University;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
