--- a/Project/Project/UniversityRating/UniversityRating.Presentation/UniversityRating.Presentation.csproj
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/UniversityRating.Presentation.csproj
@@ -22,4 +22,10 @@
     <ProjectReference Include="..\UniversityRating.Services\UniversityRating.Services.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="wwwroot\Content\" />
+    <Folder Include="wwwroot\Scripts\" />
+  </ItemGroup>
+
 </Project>
