--- a/Project/Project/UniversityRating/UniversityRating.Services/UniversityRating.Services.csproj
+++ b/Project/Project/UniversityRating/UniversityRating.Services/UniversityRating.Services.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\UniversityRating.Data.Abstractions\UniversityRating.Data.Abstractions.csproj" />
     <ProjectReference Include="..\UniversityRating.Data.Core\UniversityRating.Data.Core.csproj" />
+    <ProjectReference Include="..\UniversityRating.Data\UniversityRating.Data.csproj" />
     <ProjectReference Include="..\UniversityRating.Services.Abstractions\UniversityRating.Services.Abstractions.csproj" />
   </ItemGroup>
 
