--- a/Project/Project/UniversityRating/UniversityRating.Presentation/UniversityRating.Presentation.csproj
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/UniversityRating.Presentation.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <UserSecretsId>aspnet-UniversityRating.Presentation-7264EFD0-12FF-4929-9499-F291A981A645</UserSecretsId>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
 
 
